# graph_pattern_learning

./: .gitignore  IMPLEMENTATION_v0.3.0.md  PLAN.md  PROJECT.md  README.md  audit_quality.py  create_ortho_plans.py  create_presentation.py  draw_plans.py  evaluate_quality.py  inspect_dataset.py  pyproject.toml  requirements.txt  run_explainer.py  task.md  visualize_samples.py
outputs/audit/: floor_area_report.json
outputs/dataset_200/: metadata.json
outputs/dataset_200_new/: metadata.json
outputs/explainer/: counterfactual_report.json  mined_patterns.json  motif_dictionary.json  motif_dictionary.txt  motif_dictionary_v2.json
src/: __init__.py
src/config/: __init__.py  building_rules.yaml  room_catalog.yaml
src/data/: __init__.py  constraints.py  dataset.py  feature_engineering.py  floor_audit.py  generator.py  room_factory.py  room_rules.py  topology_rules.py
src/explainer/: __init__.py  clustering.py  counterfactual.py  explanation.py  frequent_mining.py  mcts_search.py  motif.py  subgraph_runner.py  wl_kernel.py
src/graph/: __init__.py  graph_stats.py  graph_utils.py  school_graph.py
src/metrics/: __init__.py  quality_metrics.py
src/models/: __init__.py  encoder.py  losses.py  multitask_scorer.py  ranking_loss.py  scorer.py
src/training/: __init__.py  data_loader.py  trainer.py
src/ui/: __init__.py  app.py  (+3 more)
tests/: __init__.py  test_constraints.py  test_enums.py  test_feature_engineering.py  test_generator.py  test_graph_stats.py  test_graph_utils.py  test_room_factory.py  test_school_graph.py  test_serialization.py  test_topology_rules.py
(+5 files in other folders)
